--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!-- 导航地址 start -->
     <div class="nav-content">
       <div class="jj-list">
-        <div class="jj-list-tit">麦 · Mai</div>
+        <div class="jj-list-tit">常用1</div>
         <ul class="jj-list-con">
           <li><a href="https://www.google.com/" class="jj-list-link" target="_blank">Google</a></li>
           <li><a href="https://www.baidu.com/" class="jj-list-link" target="_blank">百度</a></li>
@@ -84,7 +84,7 @@
         </ul>
       </div>
       <div class="jj-list">
-        <div class="jj-list-tit">胖 · Pang</div>
+        <div class="jj-list-tit">常用2</div>
         <ul class="jj-list-con">
           <li><a href="https://www.zhihu.com/" class="jj-list-link" target="_blank">知乎</a></li>
           <li><a href="https://web.okjike.com/feed/" class="jj-list-link" target="_blank">即刻</a></li>
@@ -98,7 +98,7 @@
         </ul>
       </div>
       <div class="jj-list">
-        <div class="jj-list-tit">皮 · Pi</div>
+        <div class="jj-list-tit">常用3</div>
         <ul class="jj-list-con">
           <li><a href="https://ke.qq.com/" class="jj-list-link" target="_blank">腾讯课堂</a></li>
           <li><a href="https://study.163.com/" class="jj-list-link" target="_blank">网易云课堂</a></li>
@@ -113,7 +113,7 @@
         </ul>
       </div>
       <div class="jj-list">
-        <div class="jj-list-tit">笑 · Xiao</div>
+        <div class="jj-list-tit">常用4</div>
         <ul class="jj-list-con">
           <li><a href="https://www.36kr.com/" class="jj-list-link" target="_blank">36氪</a></li>
           <li><a href="https://www.huxiu.com/" class="jj-list-link" target="_blank">虎嗅</a></li>
@@ -127,7 +127,7 @@
         </ul>
       </div>
       <div class="jj-list">
-        <div class="jj-list-tit">嘻 · Xi</div>
+        <div class="jj-list-tit">常用5</div>
         <ul class="jj-list-con">
           <li><a href="https://map.baidu.com/" class="jj-list-link" target="_blank">百度地图</a></li>
           <li><a href="http://www.google.cn/maps" class="jj-list-link" target="_blank">谷歌地图</a></li>
@@ -142,7 +142,7 @@
         </ul>
       </div>
       <div class="jj-list">
-        <div class="jj-list-tit">嘻 · Xi</div>
+        <div class="jj-list-tit">常用6</div>
         <ul class="jj-list-con">
           
           <li><a href="http://www.dytt8.net/" class="jj-list-link" target="_blank">电影天堂</a></li>
