--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <img src="./static/img/logo.gif" alt="logo">
       </div>
       <div class="logo-right">
-        <span>只言片语，可寻万物</span>
+        <span>陈先杰 导航测试</span>
       </div>
     </div>
     <!-- slogan end -->
