--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <ul class="jj-list-con">
           <li><a href="https://ke.qq.com/" class="jj-list-link" target="_blank">腾讯课堂</a></li>
           <li><a href="https://study.163.com/" class="jj-list-link" target="_blank">网易云课堂</a></li>
-          <li><a href="https://www.fantexitv.com/home.html/" class="jj-list-link" target="_blank">范特西视频</a></li>
+          <li><a href="https://www.fantexitv.com/home.html" class="jj-list-link" target="_blank">范特西视频</a></li>
           <li><a href="https://www.bilibili.com/" class="jj-list-link" target="_blank">哔哩哔哩</a></li>
           <li><a href="https://www.iqiyi.com/" class="jj-list-link" target="_blank">爱奇艺</a></li>
           <li><a href="https://v.qq.com/" class="jj-list-link" target="_blank">腾讯视频</a></li>
