乱七八糟改为陈先杰2

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>陈先杰导航 &nbsp;- 不懂就搜，一搜就懂</title>
+    <title>陈先杰2导航 &nbsp;- 不懂就搜，一搜就懂</title>
     <meta name="keywords" content="乱七八糟导航,不懂就搜,实用网址,主页导航,简单网址导航">
     <meta name="description" content="乱七八糟！"/>
     <link rel="shortcut icon" href="static/img/favicon.ico">
